--- a/WaterName/styles.css
+++ b/WaterName/styles.css
@@ -4,7 +4,15 @@ body,
 html {
   height: 100%;
   margin: 0;
-  background: #03001e;
+  animation: scroll 50s linear infinite;
+  background: url("https://images.unsplash.com/photo-1506318137071-a8e063b4bec0?q=80&w=1000&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxleHBsb3JlLWZlZWR8MTF8fHxlbnwwfHx8fHw%3D"),
+    #111111;
+  color: #eee;
+  height: 100vh;
+  min-width: 360px;
+  width: 100%;
+  perspective: 1000px;
+  perspective-origin: 50%, 50%;
 }
 
 .center {
@@ -16,22 +24,22 @@ html {
 
 h2 {
   position: absolute;
-  font-size: 6em;
-  position: absolute;
   top: 10%;
   left: 50%;
   transform: translate(-50%, -50%);
   white-space: nowrap;
+  font-size: 50px;
 }
 
 h2:nth-child(1) {
   color: transparent;
-  -webkit-text-stroke: 2px #7303c0;
+  -webkit-text-stroke: 3px #50c878;
+  /*#7303c0 #ec38bc*/
 }
 
 h2:nth-child(2) {
-  color: #ec38bc;
-  animation: animate 4s ease-in-out infinite;
+  color: #dadff7;
+  animation: animate 2s ease-in-out infinite;
 }
 
 @keyframes animate {
@@ -65,8 +73,21 @@ h2:nth-child(2) {
   }
 }
 
-@media (max-width: 768px) {
+@keyframes scroll {
+  100% {
+    background-position: 0px -400%;
+  }
+}
+
+/* Fallback if the operatring system prefers reduced motion*/
+@media (prefers-reduced-motion) {
+  .body {
+    animation: scroll 800s linear infinite;
+  }
+}
+
+@media (min-width: 670px) {
   h2 {
-    font-size: 8vw;
+    font-size: 5rem;
   }
 }
