--- a/Lines/style.css
+++ b/Lines/style.css
@@ -2,23 +2,27 @@ body {
   height: 100vh;
   width: 100vw;
   background-color: black;
-  margin: 0 rem;
+  margin: 0;
   overflow: hidden;
 }
 
-.image-track > .image{
-    width: 40vmin;
-    height: 56vmin;
-    object-fit: cover;
-    object-position: center;
+#image-track {
+  display: flex;
+  gap: 4vmin;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  user-select: none;
+  white-space: nowrap;
+  transition: transform 0.5s ease-out;
 }
 
-.image-track{
-    display: flex;
-    gap: 4vmin;
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(0%, -50%);
+#image-track > .image {
+  width: 40vmin;
+  height: 56vmin;
+  object-fit: cover;
+  object-position: center;
 }
+
 
